[gd_scene load_steps=14 format=3 uid="uid://dlpsyvn8imf6k"]

[ext_resource type="Texture2D" uid="uid://cow6etb1h2is7" path="res://Assets/OurStuff/BP.png" id="1_ul2td"]
[ext_resource type="Script" uid="uid://citu48wv8mrl4" path="res://Scripts/character_1.tres.gd" id="1_yiwxm"]
[ext_resource type="Texture2D" uid="uid://c4ocylpikycit" path="res://Assets/OurStuff/BR.png" id="2_j0ejx"]
[ext_resource type="Texture2D" uid="uid://tbgpwnywn0od" path="res://Assets/OurStuff/BS.png" id="3_6nlah"]
[ext_resource type="AudioStream" uid="uid://cttme2kc6jxbp" path="res://Assets/Sounds/Movements/WalkingSHort.mp3" id="4_ul2td"]
[ext_resource type="AudioStream" uid="uid://beqoof58d6foe" path="res://Assets/Sounds/Movements/Jump1.wav" id="5_0u0ux"]
[ext_resource type="AudioStream" uid="uid://b6advqkan5fg4" path="res://Assets/Sounds/Movements/Jump2.wav" id="6_yiwxm"]
[ext_resource type="AudioStream" uid="uid://bupyyu8owm52" path="res://Assets/Sounds/Movements/Jump3.wav" id="7_rbena"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6nlah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ul2td")
}],
"loop": true,
"name": &"Paper",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j0ejx")
}],
"loop": true,
"name": &"Rock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6nlah")
}],
"loop": true,
"name": &"Scissors",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f101p"]
size = Vector2(8, 2)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uuxwk"]
streams_count = 3
stream_0/stream = ExtResource("5_0u0ux")
stream_1/stream = ExtResource("6_yiwxm")
stream_2/stream = ExtResource("7_rbena")

[sub_resource type="CircleShape2D" id="CircleShape2D_f101p"]
radius = 5.0

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_0u0ux"]

[node name="Character1" type="CharacterBody2D" groups=["Players"]]
z_index = 5
collision_layer = 2
script = ExtResource("1_yiwxm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_6nlah")
animation = &"Paper"

[node name="GroundHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f101p")

[node name="PlayerSwitch" type="AudioStreamPlayer2D" parent="."]

[node name="Run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ul2td")

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_uuxwk")

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_f101p")

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="PlayerHitbox"]
stream = SubResource("AudioStreamPolyphonic_0u0ux")

[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_area_entered"]
